--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,8 +17,93 @@ body {
 }
 
 /* Nav styling */
+.desktop-menu {
+  display: none;
+}
+
+nav a {
+  color: var(--colorwhite);
+  text-decoration: none;
+}
+
+nav a:visited {
+  color: var(--colorwhite);
+}
+
+nav a:hover {
+  color: var(--colorblue);
+}
+
 .nav-list-item {
   list-style: none;
+}
+
+/* off-screen-menu */
+.off-screen-menu {
+  background-color:  var(--colorgrey);
+  height: 100vh;
+  width: 100%;
+  max-width: 450px;
+  position: fixed;
+  top: 0;
+  right: -450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;    
+  justify-content: center;
+  text-align: center;
+  font-size: 3rem;
+  transition: .3s ease;
+}
+.off-screen-menu.active {
+  right: 0;
+}
+
+
+/* ham menu */
+.ham-menu {
+  height: 50px;
+  width: 40px;
+  margin-left: auto;
+  position: relative;
+}
+
+.ham-menu span {
+  height: 5px;
+  width: 100%;
+  background-color: var(--colorblack);
+  border-radius: 25px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: .3s ease;
+}
+
+.ham-menu span:nth-child(1) {
+  top: 25%;
+}
+
+.ham-menu span:nth-child(3) {
+  top: 75%;
+}
+
+.ham-menu.active span {
+  background-color: var(--colorwhite);
+}
+
+.ham-menu.active span:nth-child(1) {
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.ham-menu.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3) {
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .nav-img {
