fix menus position

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -346,3 +346,16 @@ nav a:hover {
     width: 400px;
   }
 }
+
+/* Mobile only */ 
+@media(max-width: 599px) {
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+  }
+
+  .socials-icons {
+    flex-basis: 100%;
+  }
+}
